trunk/Archive2/8d/7ae912d917c57f/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:5:14: error: cannot convert 'main()::__lambda0' to 'bool' in initialization
     bool b = lambda;
              ^
main.cpp:7:14: error: could not convert 'lambda' from 'main()::__lambda0' to 'bool'
     if(lambda) {}
              ^
main.cpp:5:10: warning: unused variable 'b' [-Wunused-variable]
     bool b = lambda;
          ^
